--- a/blog-backend/pom.xml
+++ b/blog-backend/pom.xml
@@ -35,7 +35,8 @@
         <fastjson.version>1.2.62</fastjson.version>
         <commons.pool2.version>2.8.0</commons.pool2.version>
         <bitwalker.version>1.19</bitwalker.version>
-        <oshi.version>3.9.1</oshi.version>
+        <oshi.version>6.4.1</oshi.version>
+        <jna.version>5.13.0</jna.version>
     </properties>
 
     <dependencies>
@@ -218,11 +219,13 @@
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
+            <version>${jna.version}</version>
         </dependency>
 
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna-platform</artifactId>
+            <version>${jna.version}</version>
         </dependency>
 
     </dependencies>
